--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,15 @@ body {
   font-size: 22px;
   margin-left: 10px; }
 .head_my-3 button {
-  padding: 8px; 
-  white-space: pre-wrap;}
-  .head_my-3 button span img {
-    width: 45px; }
+  padding: 0px; 
+  white-space: pre-wrap; }
+
+  .head_my-3 .navbar-toggler button span  {
+    width: 40px; }
 .head_my-3 #navbarNav .navbar-nav .nav-item .nav-link {
   color: #000;
   font-weight: 400;
-  padding: 8px 15px;
+  padding: 10px 15px;
   white-space: pre-wrap;
   transition: 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86); }
   .head_my-3 #navbarNav .navbar-nav .nav-item .nav-link:hover {
@@ -36,7 +37,7 @@ body {
   width: inherit;
   padding: 45px 0;}
   @media screen and (max-width: 991.98px) {
-    .section .bloco1 {
+    .section .bloco1 .home {
       flex-direction: column-reverse; } }
    .bloco1 .col-md-4 {
     margin-top: 80px; }
@@ -60,8 +61,13 @@ body {
       .bloco1 .col-lg-8 img {
         width: 100%;
         position: relative;
-        top: 0;
-        right: 0; } }
+        top: -500px;
+        right: 0; } 
+        .bloco1 .col-md-4 {
+          width: 100%;
+          position: relative;
+          top: 200px;
+          right: 0; } } }
   .bloco1 .col-lg-8 .animate-img img {
     width: 118px;
     position: absolute;
@@ -102,15 +108,64 @@ body {
         right: 400px; }
         @media screen and (max-width: 991.98px) {
           .bloco2 .col-md-8 img {
-            width: 100%;
+            width: 120%;
             position: relative;
-            top: 0;
-            right: 0; } }
+            top: -600px;
+            right: 40px; } 
+            .bloco2 .col-lg-4 {
+              width: 100%;
+              position: relative;
+              top: 100px;
+              left: -45px; } 
+              .bloco2 .col-lg-4 h2 {
+                font-weight: 50px;
+                font-size: 40px;
+                position: relative;
+                right: -35px } }
 
 
 
 
-
+ #orçamentos {
+                  padding-top: 80px;
+                }
+                
+                .section {
+                  width: inherit;
+                  padding: 45px 0;}
+                  @media screen and (max-width: 991.98px) {
+                    .section .bloco3 .orçamentos {
+                      flex-direction: column-reverse; } }
+                   .bloco3 .col-my-lg-0 {
+                    margin-top: 80px; }
+                    .bloco3 .col-my-lg-0 h2 {
+                      font-weight: 900;
+                      font-size: 50px;
+                      color: rgb(5, 5, 5);
+                      margin-bottom: 0;
+                      line-height: 1;
+                      white-space: normal; }
+                    .bloco3 .col-my-lg-0 p {
+                      color: #000;
+                      font-size: 14px;
+                      margin-top: 20px; } 
+                  .bloco3 .col-lt-4 img {
+                    width: 60%;
+                    position: absolute;
+                    top: 1200px;
+                    right: -4%; }
+                    @media screen and (max-width: 991.98px) {
+                      .bloco3 .col-lt-4 img {
+                        width: 120%;
+                        position: relative;
+                        top: -1200px;
+                        right: 0; } 
+                        .bloco3 .col-lt-4 {
+                          width: 120%;
+                          position: relative;
+                          top: 180px;
+                          right: 0; } } }
+                  
      
 
 /*# sourceMappingURL=style.css.map */
